Pull up following revision(s) (requested by riastradh in ticket #603):

tests/lib/libm/t_fenv.c: revision 1.14
	tests/lib/libm/t_fenv.c: revision 1.15
	lib/libm/arch/x86_64/fenv.c: revision 1.11

fenv(3): Add test for PR port-amd64/57949.

fenv(3): Fix fetestexcept to avoid side effects on trap state.

PR port-amd64/57949